[tool.poetry]
name = "heytorvas"
version = "0.0.5"
description = "Heytor Victor's Portfolio"
authors = ["Heytor Victor <heytor@heytor.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
rich = "13.9.2"
typer = "0.12.3"
pytest = "8.3.2"

[tool.poetry.scripts]
heytorvas = "heytorvas.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
