[tool.poetry]
name = "heytorvas"
version = "0.0.8"
description = "Heytor Victor's Portfolio"
authors = ["Heytor Victor <heytor@heytor.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
rich = "13.9.4"
typer = "0.13.1"
pytest = "8.3.4"

[tool.poetry.scripts]
heytorvas = "heytorvas.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
